@startuml
package "Strategy Pattern (Lõi Thực thi Điều khiển)" {
    class IrrigationContext {
        + executeControl(strategy: IrrigationStrategy, farmId: UUID, deviceId: UUID, command: String): Boolean
    }

    interface IrrigationStrategy <<Interface>> {
        + executeControl(farmId: UUID, deviceId: UUID, command: String): Boolean
    }

    class ManualStrategy {
        + executeControl(farmId: UUID, deviceId: UUID, command: String): Boolean
        - validateModeIsManual(): Boolean
    }

    class ScheduledStrategy {
        + executeControl(farmId: UUID, deviceId: UUID, command: String): Boolean
        - validateModeIsAuto(): Boolean
    }

    class AutoThresholdStrategy {
        + executeControl(farmId: UUID, deviceId: UUID, command: String): Boolean
        - validateModeIsAuto(): Boolean
    }

    IrrigationContext ..> "1" IrrigationStrategy : Receives as parameter
    IrrigationStrategy <|.. ManualStrategy
    IrrigationStrategy <|.. ScheduledStrategy
    IrrigationStrategy <|.. AutoThresholdStrategy
}
@enduml